// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Home Page A11y I can see the skip to content link 1`] = `"Сайтка өтүү"`;

exports[`Canonical Home Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Home Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Home Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "58",
  },
  {
    "p": "kyrgyz.page",
  },
  {
    "x1": "[urn:bbc:tipo:topic:cm7682qz7v1t]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-kyrgyz]",
  },
  {
    "x4": "[ky]",
  },
  {
    "x7": "[index-home]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[BBC%20News%20Kyrgyz]",
  },
]
`;

exports[`Canonical Home Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Кыргыз КызMATы",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 2`] = `
{
  "text": "Эмнеге BBC News ишенсе болот?",
  "url": "https://www.bbc.com/kyrgyz/institutional-49677275",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 3`] = `
{
  "text": "Колдонуу эрежелери",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157280",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 4`] = `
{
  "text": "Би-Би-Си жөнүндө",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157281",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 5`] = `
{
  "text": "Купуялык",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157282",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 7`] = `
{
  "text": "Би-Би-Си менен байланышыңыз",
  "url": "https://www.bbc.co.uk/kyrgyz/send/u50853445",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 8`] = `
{
  "text": "Башка тилдерде",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Home Page Footer Anchors should match text and url 9`] = `
{
  "text": "Башка интернет сайттардын мазмуну боюнча биздин позиция.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Home Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/kyrgyz"`;

exports[`Canonical Home Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. Би-Би-Си сырткы интернет сайттардын мазмуну үчүн жооптуу эмес. Башка интернет сайттардын мазмуну боюнча биздин позиция."`;

exports[`Canonical Home Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Кыргыз КызMATы",
  "svg": <path
    d="M759.928 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.193a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.647v-72.699h22.004V265.75h-23.193zM804.187 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.101 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.441-35.977 2391.54 2391.54 0 01-9.217 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.586 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.23 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.471 267.98c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.869-1.138 15.388-3.419 3.517-2.28 5.277-5.45 5.277-9.515 0-3.07-.868-5.475-2.601-7.21-1.735-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.227-3.889-11.298-6.319-3.073-2.427-5.403-5.352-6.988-8.771-1.586-3.42-2.378-7.508-2.378-12.265 0-6.74 1.71-12.537 5.128-17.395 3.42-4.855 8.252-8.597 14.496-11.225 6.244-2.624 13.678-3.939 22.3-3.939 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.719 5.203v20.22c-4.363-2.677-9.292-4.758-14.793-6.245-5.5-1.487-11.027-2.23-16.577-2.23-6.046 0-10.73 1.04-14.049 3.122-3.322 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.378 6.616 1.585 1.635 3.84 2.973 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.047 5.055 1.29 9.761 2.702 14.124 4.238 4.36 1.537 8.2 3.493 11.521 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.447-6.542 2.626-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 1`] = `
{
  "text": "Ачылып турган баракча, Башкы бет",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 2`] = `
{
  "text": "Видео жаңылыктар",
  "url": "/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=4t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 3`] = `
{
  "text": "Кыргызстан",
  "url": "/kyrgyz/topics/cz74kjpyk07t",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 4`] = `
{
  "text": "Дүйнө",
  "url": "/kyrgyz/topics/ck2l9z012nkt",
}
`;

exports[`Canonical Home Page Header Navigation link should match text and url 5`] = `
{
  "text": "Журнал",
  "url": "/kyrgyz/topics/czp8pjrkgp0t",
}
`;

exports[`Canonical Home Page Main heading should match text 1`] = `"BBC News, Кыргыз КызMATы - Башталгыч бет"`;

exports[`Canonical Home Page Most Read has item with rank 1`] = `
{
  "text": "АКШ: жаңы президент ким экенин аныктаган штаттар кайсылар?",
  "url": "/kyrgyz/world-23090100",
}
`;

exports[`Canonical Home Page Most Read has item with rank 2`] = `
{
  "text": "Kyrgyzstanda soz erkindigi buzuluuda",
  "url": "/kyrgyz/world-23089413",
}
`;

exports[`Canonical Home Page Most Read has item with rank 3`] = `
{
  "text": "Тарых барактары: Кыргызстан-Өзбекстан ортосундагы коңшулук мамиле 36",
  "url": "/kyrgyz/kyrgyzstan-23087515",
}
`;

exports[`Canonical Home Page Most Read has item with rank 4`] = `
{
  "text": "Тарых барактары: Кыргызстан-Өзбекстан ортосундагы коңшулук мамиле 34",
  "url": "/kyrgyz/kyrgyzstan-23087513",
}
`;

exports[`Canonical Home Page Most Read has item with rank 5`] = `
{
  "text": "Тарых барактары: Кыргызстан-Өзбекстан ортосундагы коңшулук мамиле 35",
  "url": "/kyrgyz/kyrgyzstan-23087514",
}
`;

exports[`Canonical Home Page Page content First item in the first curation is the correct headline 1`] = `"Test promo overtype URL"`;

exports[`Canonical Home Page Page content First item in the first curation is the correct image 1`] = `
<img
  class="bbc-139onq"
  fetchpriority="high"
  loading="eager"
  src="https://ichef.bbci.co.uk/ace/ws/240/cpsprodpb/36D1/production/_127933041__63970643_bbc-news-world-service-logo-nc.png.webp"
  style="aspect-ratio:16 / 9"
/>
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Home Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Home Page SEO Canonical link 1`] = `"http://localhost:7080/kyrgyz"`;

exports[`Canonical Home Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Home Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Home Page SEO Heading level 1 1`] = `"BBC News, Кыргыз КызMATы - Башталгыч бет"`;

exports[`Canonical Home Page SEO Lang attribute 1`] = `"ky"`;

exports[`Canonical Home Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "CollectionPage",
      "headline": "BBC News Kyrgyz",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ky",
        "name": "Kyrgyz",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/kyrgyz",
        "@type": "WebPage",
        "name": "BBC News Kyrgyz",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "publishingPrinciples": "https://www.bbc.com/kyrgyz/institutional-49677275",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
      "url": "http://localhost:7080/kyrgyz",
    },
    {
      "@type": "ItemList",
      "itemListElement": [
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 1,
          "url": "https://www.bbc.com/kyrgyz",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 2,
          "url": "https://www.bbc.com/kyrgyz",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 3,
          "url": "https://www.bbc.com/news/topics/c77jz3mdmyvt",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 4,
          "url": "https://www.bbc.com/kyrgyz",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 5,
          "url": "https://www.bbc.com/sport/live/c3jl8r5kpe2t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 6,
          "url": "https://www.bbc.com/sport/videos/c1ldm3kjnwyo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 7,
          "url": "https://www.bbc.com/sport/rugby-union/articles/cr2ky03md5do",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 8,
          "url": "https://www.bbc.com/kyrgyz",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 9,
          "url": "https://www.bbc.com/sport/rugby-union/23537091",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 10,
          "url": "https://www.bbc.com/sport/articles/c5w90rmn69yo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 11,
          "url": "https://www.bbc.com/sport/articles/cvl5vjypeveo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 12,
          "url": "https://www.bbc.com/kyrgyz/articles/cem4313m1ldo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 13,
          "url": "https://www.bbc.com/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=10",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 14,
          "url": "https://www.bbc.com/kyrgyz/resources/idt-02d9060e-15dc-426c-bfe0-86a6437e5234",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 15,
          "url": "https://www.bbc.com/kyrgyz/articles/cemg3359nwro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 16,
          "url": "https://www.bbc.com/kyrgyz/articles/cy0pvvd9jvpo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 17,
          "url": "https://www.bbc.com/kyrgyz/articles/c1ldk6kl66wo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 18,
          "url": "https://www.bbc.com/kyrgyz/articles/cmel5j6wwk2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 19,
          "url": "https://www.bbc.com/kyrgyz/articles/cd0x1jwnw66o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 20,
          "url": "https://www.bbc.com/kyrgyz/articles/c65eglnzz1vo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 21,
          "url": "https://www.bbc.com/kyrgyz/articles/cj2r5lzp6k0o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 22,
          "url": "https://www.bbc.com/kyrgyz/articles/c2qz8l2zn5eo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 23,
          "url": "https://www.bbc.com/kyrgyz/articles/cm18pzwq691o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 24,
          "url": "https://www.bbc.com/kyrgyz/articles/cr89pqv3el2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 25,
          "url": "https://www.bbc.com/kyrgyz/articles/cr9p5rw62j7o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 26,
          "url": "https://www.bbc.com/kyrgyz/articles/cnk23wye4kyo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 27,
          "url": "https://www.bbc.com/kyrgyz/articles/c0n89302mwdo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 28,
          "url": "https://www.bbc.com/kyrgyz/articles/clygdvn0vepo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 29,
          "url": "https://www.bbc.com/kyrgyz/articles/c0n2glkxx13o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 30,
          "url": "https://www.bbc.com/kyrgyz/articles/c85pqkmwkw5o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 31,
          "url": "https://www.bbc.com/kyrgyz/articles/c85pqkmz8e2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 32,
          "url": "https://www.bbc.com/kyrgyz/articles/ck42g152vl6o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 33,
          "url": "https://www.bbc.com/kyrgyz/articles/c6x9vjk8zy2o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 34,
          "url": "https://www.bbc.com/kyrgyz/articles/cw1kzjme384o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 35,
          "url": "https://www.bbc.com/kyrgyz/articles/c3d1vyrdx21o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 36,
          "url": "https://www.bbc.com/kyrgyz/articles/c86jzl31jm5o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 37,
          "url": "https://www.bbc.com/kyrgyz/articles/cp567nq7kx6o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 38,
          "url": "https://www.bbc.com/kyrgyz/articles/cv748vmk2pno",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 39,
          "url": "https://www.bbc.com/kyrgyz/articles/ck9yxzvv7deo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 40,
          "url": "https://www.bbc.com/kyrgyz/articles/c380rxlx2z9o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 41,
          "url": "https://www.bbc.com/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=4",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 42,
          "url": "https://www.bbc.com/kyrgyz/articles/cr91pzee4dro",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 43,
          "url": "https://www.bbc.com/kyrgyz/articles/czmnz5184jeo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 44,
          "url": "https://www.bbc.com/kyrgyz/articles/cd0nevdy25vo",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 45,
          "url": "http://www.bbc.com/russian",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 46,
          "url": "http://www.bbc.com/azeri",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 47,
          "url": "http://www.bbc.com/uzbek",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 48,
          "url": "http://www.bbc.com/turkce",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 49,
          "url": "https://www.bbc.com/punjabi/topics/cz74k76n1jxt",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 50,
          "url": "https://www.bbc.com/pidgin/live/cemy52djeq5t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 51,
          "url": "https://www.bbc.com/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=6",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 52,
          "url": "https://www.bbc.com/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=8",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 53,
          "url": "https://www.test.bbc.com/kyrgyz.lite",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 54,
          "url": "https://www.bbc.com/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=9",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 55,
          "url": "https://flo.uri.sh/story/2070814/embed",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 56,
          "url": "https://www.bbc.com/kyrgyz",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 57,
          "url": "https://news.files.bbci.com/include/vjsthasia/403-india_election_results_day/hindi/tally-include/embed",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 58,
          "url": "https://www.test.bbc.com/pidgin/live/c7p765ynk9qt",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 59,
          "url": "https://www.test.bbc.com/pidgin/live/cgl2vz8d587t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 60,
          "url": "https://www.test.bbc.com/pidgin/live/cy0mg3kvxnlt",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 61,
          "url": "https://www.test.bbc.com/pidgin/live/cly58zvmwygt",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 62,
          "url": "https://www.test.bbc.com/pidgin/live/cemy52djeq5t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 63,
          "url": "https://www.test.bbc.com/pidgin/live/c65nm48pr8et",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 64,
          "url": "https://www.test.bbc.com/pidgin/live/cpvg17j60m7t",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 65,
          "url": "https://www.test.bbc.com/pidgin/live/cg2pr8l7j3nt",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 66,
          "url": "https://www.bbc.com/hausa/articles/cpvpg2e6130o",
        },
        {
          "@context": "http://schema.org",
          "@type": "ListItem",
          "position": 67,
          "url": "https://www.bbc.com/hausa/articles/c2l2e8px0l3o",
        },
      ],
      "name": "BBC News Кыргыз Кызматы",
      "numberOfItems": 67,
    },
  ],
}
`;

exports[`Canonical Home Page SEO OG description 1`] = `
"Hello I am a description! I was added in the "Description" field from the Details section in Tipo
BBC Azeri curation should be Top Stories  - VS = Collection / VP = High"
`;

exports[`Canonical Home Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png"`;

exports[`Canonical Home Page SEO OG image alt 1`] = `"BBC News Кыргыз КызMATы"`;

exports[`Canonical Home Page SEO OG locale 1`] = `"ky-KG"`;

exports[`Canonical Home Page SEO OG site name 1`] = `"BBC News Кыргыз Кызматы"`;

exports[`Canonical Home Page SEO OG title 1`] = `"BBC News Kyrgyz - BBC News Кыргыз Кызматы"`;

exports[`Canonical Home Page SEO OG type 1`] = `"website"`;

exports[`Canonical Home Page SEO OG url 1`] = `"http://localhost:7080/kyrgyz"`;

exports[`Canonical Home Page SEO Page title 1`] = `"BBC News Kyrgyz - BBC News Кыргыз Кызматы"`;

exports[`Canonical Home Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Home Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Home Page SEO Twitter creator 1`] = `"@bbckyrgyz"`;

exports[`Canonical Home Page SEO Twitter description 1`] = `
"Hello I am a description! I was added in the "Description" field from the Details section in Tipo
BBC Azeri curation should be Top Stories  - VS = Collection / VP = High"
`;

exports[`Canonical Home Page SEO Twitter image alt 1`] = `"BBC News Кыргыз КызMATы"`;

exports[`Canonical Home Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png"`;

exports[`Canonical Home Page SEO Twitter site 1`] = `"@bbckyrgyz"`;

exports[`Canonical Home Page SEO Twitter title 1`] = `"BBC News Kyrgyz - BBC News Кыргыз Кызматы"`;

exports[`Canonical Home Page Timestamp should match text and date 1`] = `
{
  "date": "2024-03-08",
  "text": "8 март 2024",
}
`;

exports[`Canonical Home Page messageBanner has a link 1`] = `"https://www.bbc.com/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=4"`;

exports[`Canonical Home Page messageBanner has an image 1`] = `
<img
  alt=""
  class="bbc-139onq"
  loading="eager"
  sizes="(max-width: 37.4375rem) 184px, 224px"
  src="https://ichef.test.bbci.co.uk/ace/ws/224/cpsdevpb/0af7/test/5a5151c0-a3aa-11ed-9015-6935ab4fa6ca.png.webp"
  srcset="https://ichef.test.bbci.co.uk/ace/ws/184/cpsdevpb/0af7/test/5a5151c0-a3aa-11ed-9015-6935ab4fa6ca.png.webp 184w, 
                          https://ichef.test.bbci.co.uk/ace/ws/368/cpsdevpb/0af7/test/5a5151c0-a3aa-11ed-9015-6935ab4fa6ca.png.webp 368w, 
                          https://ichef.test.bbci.co.uk/ace/ws/224/cpsdevpb/0af7/test/5a5151c0-a3aa-11ed-9015-6935ab4fa6ca.png.webp 224w, 
                          https://ichef.test.bbci.co.uk/ace/ws/448/cpsdevpb/0af7/test/5a5151c0-a3aa-11ed-9015-6935ab4fa6ca.png.webp 448w"
  style="aspect-ratio:16 / 9"
/>
`;
